# pg-purepy

./: .gitignore  .hgignore  .hgtags  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  README.rst  pyproject.toml
.github/workflows/: ci.yaml
docs/: api-highlevel.rst  api-lowlevel.rst  api-midlevel.rst  changelog.rst  conf.py  conversion.rst  current-support.rst  index.rst  installation.rst  messages.rst
docs/_static/css/: custom.css
src/pg_purepy/: __init__.py  connection.py  converters.py  dbapi.py  exc.py  messages.py  pool.py  protocol.py  util.py
src/pg_purepy/conversion/: __init__.py  _parse_hstore.py  abc.py  array_parse.py  arrays.py  basics.py  dt.py  enums.py  hstore.py
tests/: test_async_connection.py  test_connection_pool.py  test_converters.py  test_datarow.py  test_protocol.py  util.py
tests/converters/: test_array_converters.py  test_basic_converters.py  test_dt_converters.py  test_enum_converter.py  test_hstore.py  test_json_converters.py
tests/hilevel/: __init__.py  test_connection_pool.py  test_highlevel_helpers.py
